Updated NAMESPACE and DESCRIPTION

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -61,6 +61,7 @@ Collate:
     'STUtility2-package.R'
     'checks.R'
     'generics.R'
+    'cell_type_prediction.R'
     'digital_unroll.R'
     'digital_unroll_utils.R'
     'spatial_utils.R'
@@ -73,7 +74,6 @@ Collate:
     'local_G.R'
     'mask.R'
     'neighborhood_analysis.R'
-    'nmf_methods.R'
     'plot_images.R'
     'prepare_for_digital_unroll.R'
     'radial_distance.R'
