--- a/NAMESPACE
+++ b/NAMESPACE
@@ -75,6 +75,7 @@ exportMethods("[[")
 exportMethods("[[<-")
 exportMethods(GetImages)
 exportMethods(ImageInfo)
+import(cli)
 import(dplyr)
 import(ggplot2)
 import(glue)
@@ -98,10 +99,6 @@ importFrom(Seurat,VariableFeatures)
 importFrom(Seurat,WhichCells)
 importFrom(Seurat,`DefaultAssay<-`)
 importFrom(SeuratObject,RowMergeSparseMatrices)
-importFrom(cli,cli_h2)
-importFrom(cli,cli_h3)
-importFrom(cli,cli_rule)
-importFrom(cli,col_br_magenta)
 importFrom(dbscan,kNN)
 importFrom(dplyr,across)
 importFrom(dplyr,add_count)
@@ -150,7 +147,6 @@ importFrom(ggplot2,guides)
 importFrom(ggplot2,is.ggplot)
 importFrom(ggplot2,labs)
 importFrom(ggplot2,margin)
-importFrom(ggplot2,scale_color_gradientn)
 importFrom(ggplot2,scale_color_manual)
 importFrom(ggplot2,scale_fill_gradientn)
 importFrom(ggplot2,scale_fill_manual)
