--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(CorSpatialFeatures)
 export(CreateStaffliObject)
 export(CutSpatialNetwork)
 export(DisconnectRegions)
+export(FeatureViewer)
 export(GetImages)
 export(GetSpatialNetwork)
 export(GetStaffli)
@@ -61,13 +62,17 @@ export(RunNNLS)
 export(SubsetSTData)
 export(TileImage)
 export(centroid_angles_plot)
+export(export_coordinates)
 export(export_graph)
 export(file_server)
+export(ftrviewer)
+export(ftrviewerOutput)
 export(generate_rigid_transform)
 export(icp)
 export(osdduOutput)
 export(paperOutput)
 export(prep_image)
+export(renderFtrviewer)
 export(renderOsddu)
 export(renderPaper)
 exportClasses(Staffli)
@@ -79,6 +84,7 @@ import(cli)
 import(dplyr)
 import(ggplot2)
 import(glue)
+import(htmlwidgets)
 import(rlang)
 importFrom(Matrix,colMeans)
 importFrom(Matrix,colSums)
