--- a/NAMESPACE
+++ b/NAMESPACE
@@ -84,8 +84,8 @@ import(cli)
 import(dplyr)
 import(ggplot2)
 import(glue)
-import(htmlwidgets)
 import(rlang)
+import(shiny)
 importFrom(Matrix,colMeans)
 importFrom(Matrix,colSums)
 importFrom(Matrix,rowMeans)
@@ -166,6 +166,7 @@ importFrom(ggplot2,unit)
 importFrom(ggplot2,xlim)
 importFrom(glue,glue)
 importFrom(grDevices,as.raster)
+importFrom(grDevices,colorRampPalette)
 importFrom(grDevices,hcl)
 importFrom(graphics,layout)
 importFrom(graphics,par)
@@ -229,6 +230,7 @@ importFrom(shiny,reactiveTimer)
 importFrom(shiny,renderTable)
 importFrom(shiny,renderUI)
 importFrom(shiny,runApp)
+importFrom(shiny,sliderInput)
 importFrom(shiny,stopApp)
 importFrom(shiny,strong)
 importFrom(shiny,tableOutput)
