--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@ notebooks/nmf/seeded_nmf_tests.qmd
 notebooks/nmf/mousebrain/
 notebooks/nmf/kidney/
 docs
+package.json
+webpack.config.js
+yarn.lock
