--- a/NAMESPACE
+++ b/NAMESPACE
@@ -68,7 +68,9 @@ export(ftrviewer)
 export(ftrviewerOutput)
 export(generate_rigid_transform)
 export(icp)
+export(osddu)
 export(osdduOutput)
+export(paper)
 export(paperOutput)
 export(prep_image)
 export(renderFtrviewer)
