--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,8 @@ S3method(MapFeatures,Seurat)
 S3method(MapFeatures,default)
 S3method(MapLabels,Seurat)
 S3method(MapLabels,default)
+S3method(MapMultipleFeatures,Seurat)
+S3method(MapMultipleFeatures,default)
 S3method(MaskImages,Seurat)
 S3method(MaskImages,default)
 S3method(RadialDistance,Seurat)
@@ -49,6 +51,7 @@ export(MapFeatures)
 export(MapFeaturesSummary)
 export(MapLabels)
 export(MapLabelsSummary)
+export(MapMultipleFeatures)
 export(MaskImages)
 export(MergeSTData)
 export(RadialDistance)
@@ -115,16 +118,11 @@ importFrom(dplyr,between)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,case_when)
-importFrom(dplyr,contains)
-importFrom(dplyr,count)
 importFrom(dplyr,cur_group_id)
 importFrom(dplyr,distinct)
-importFrom(dplyr,everything)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,group_split)
-importFrom(dplyr,if_all)
-importFrom(dplyr,if_any)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,n)
@@ -132,13 +130,10 @@ importFrom(dplyr,pull)
 importFrom(dplyr,rename)
 importFrom(dplyr,select)
 importFrom(dplyr,summarize)
-importFrom(dplyr,summarize_all)
 importFrom(dplyr,sym)
 importFrom(dplyr,ungroup)
 importFrom(forcats,fct_drop)
-importFrom(ggplot2,aes)
 importFrom(ggplot2,aes_string)
-importFrom(ggplot2,coord_fixed)
 importFrom(ggplot2,coord_flip)
 importFrom(ggplot2,element_blank)
 importFrom(ggplot2,element_line)
@@ -146,23 +141,14 @@ importFrom(ggplot2,element_text)
 importFrom(ggplot2,geom_boxplot)
 importFrom(ggplot2,geom_density)
 importFrom(ggplot2,geom_histogram)
-importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_violin)
 importFrom(ggplot2,ggplot)
-importFrom(ggplot2,guide_legend)
-importFrom(ggplot2,guides)
 importFrom(ggplot2,is.ggplot)
-importFrom(ggplot2,labs)
-importFrom(ggplot2,margin)
-importFrom(ggplot2,scale_color_manual)
-importFrom(ggplot2,scale_fill_gradientn)
-importFrom(ggplot2,scale_fill_manual)
 importFrom(ggplot2,scale_x_continuous)
 importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,scale_y_reverse)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_linedraw)
-importFrom(ggplot2,theme_void)
 importFrom(ggplot2,unit)
 importFrom(ggplot2,xlim)
 importFrom(glue,glue)
