Updated example data and fixed bug in MapMultipleFeatures

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -14,3 +14,10 @@ presentations/
 ^\.github$
 TODO.md
 vignettes
+inst/htmlwidgets/paper.js.map
+inst/htmlwidgets/osddu.js.map
+inst/htmlwidgets/ftrviewer.js.map
+inst/extdata/mousebrain/spatial/tissue_hires_image.png
+inst/extdata/mousebrain/spatial/tissue_lowres_image.png
+inst/extdata/mousecolon/spatial/tissue_hires_image.png
+inst/extdata/mousecolon/spatial/tissue_lowres_image.png
