Added image alignment tutorial

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ S3method(RegionNeighbors,Seurat)
 S3method(RegionNeighbors,default)
 S3method(RigidTransformImages,Seurat)
 S3method(RigidTransformImages,default)
+S3method(RunAlignment,Seurat)
 S3method(RunAlignment,default)
 S3method(RunLocalG,Seurat)
 S3method(RunLocalG,default)
