Add neighborhood analysis functions and vignette (#3)
* Write function for nbh enrichment analysis

And add tests and examples for the analysis

* Add another example for NEA and update TODO list

* Minor adjustments and clean code

* Update function name and minor fixes

* Add R code for functions RunNeighborhoodEnrichmentTest and RunLabelAssortativityTest

* Fix global variables and increase default n perm for NEA

Also add verbose to all warning messages as well

* Tutorial for neighborhood analysis functions

* Add new functions and vignette to DESCRIPTION and NAMESPACE

* Add label assortativity manual

* Remove "don't run"

* Add man nbh enrichment

* Update manuals

* Set example n_cores to 2 for CRAN check approval

* Uncomment data download

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -44,7 +44,7 @@ Imports:
     shiny,
     shinyjs,
     reactR
-RoxygenNote: 7.2.1
+RoxygenNote: 7.2.3
 Suggests: 
     farver,
     tidygraph,
@@ -89,6 +89,7 @@ Collate:
     'rigid_transform.R'
     'rigid_transform_manual.R'
     'spatial_autocorrelation.R'
+    'spatial_neighborhood_stats.R'
     'spatial_network.R'
     'staffli_object.R'
     'subset_and_merge.R'
