--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,8 +60,10 @@ export(ReadVisiumData)
 export(RegionNeighbors)
 export(RigidTransformImages)
 export(RunAlignment)
+export(RunLabelAssortativityTest)
 export(RunLocalG)
 export(RunNNLS)
+export(RunNeighborhoodEnrichmentTest)
 export(SubsetSTData)
 export(TileImage)
 export(centroid_angles_plot)
@@ -91,6 +93,7 @@ import(ggplot2)
 import(glue)
 import(rlang)
 import(shiny)
+import(tibble)
 importFrom(Matrix,colMeans)
 importFrom(Matrix,colSums)
 importFrom(Matrix,rowMeans)
@@ -235,9 +238,11 @@ importFrom(tibble,as_tibble)
 importFrom(tibble,column_to_rownames)
 importFrom(tibble,rownames_to_column)
 importFrom(tibble,tibble)
+importFrom(tidyr,crossing)
 importFrom(tidyr,drop_na)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider)
+importFrom(tidyr,replace_na)
 importFrom(tidyr,separate)
 importFrom(tidyr,uncount)
 importFrom(tidyr,unite)
