--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,6 +55,7 @@ export(MapLabelsSummary)
 export(MapMultipleFeatures)
 export(MaskImages)
 export(MergeSTData)
+export(PlotFeatureLoadings)
 export(RadialDistance)
 export(ReadVisiumData)
 export(RegionNeighbors)
