--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -79,15 +79,19 @@ Collate:
     'cut_spatial_network_utils.R'
     'spatial_utils.R'
     'disconnect_regions.R'
+    'export_data_for_viewer.R'
     'extdata.R'
     'feature_loadings_plot.R'
     'file_server.R'
+    'ftrviewer.R'
     'icp.R'
     'load_data.R'
     'load_images.R'
     'local_G.R'
     'mask.R'
     'neighborhood_analysis.R'
+    'osddu.R'
+    'paper.R'
     'plot_images.R'
     'prepare_for_digital_unroll.R'
     'prepare_for_feature_viewer.R'
