--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ export(CorSpatialFeatures)
 export(CreateStaffliObject)
 export(CutSpatialNetwork)
 export(DisconnectRegions)
+export(ExportDataForViewer)
 export(FeatureViewer)
 export(GetImages)
 export(GetSpatialNetwork)
