--- a/NAMESPACE
+++ b/NAMESPACE
@@ -156,6 +156,7 @@ importFrom(ggplot2,unit)
 importFrom(ggplot2,xlim)
 importFrom(glue,glue)
 importFrom(grDevices,as.raster)
+importFrom(grDevices,col2rgb)
 importFrom(grDevices,colorRampPalette)
 importFrom(grDevices,hcl)
 importFrom(graphics,layout)
