--- a/NAMESPACE
+++ b/NAMESPACE
@@ -68,6 +68,7 @@ export(RunNNLS)
 export(RunNeighborhoodEnrichmentTest)
 export(SubsetSTData)
 export(TileImage)
+export(UpdateSTUtilityV1Object)
 export(centroid_angles_plot)
 export(export_coordinates)
 export(export_graph)
