--- a/NAMESPACE
+++ b/NAMESPACE
@@ -85,6 +85,7 @@ export(prep_image)
 export(renderFtrviewer)
 export(renderOsddu)
 export(renderPaper)
+export(scalebar)
 exportClasses(Staffli)
 exportMethods("[[")
 exportMethods("[[<-")
