--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,8 @@ S3method(RunAlignment,Seurat)
 S3method(RunAlignment,default)
 S3method(RunLocalG,Seurat)
 S3method(RunLocalG,default)
+S3method(RunMixedNNLS,Seurat)
+S3method(RunMixedNNLS,default)
 S3method(RunNNLS,Seurat)
 S3method(RunNNLS,default)
 export(AdjustTissueCoordinates)
@@ -64,6 +66,7 @@ export(RigidTransformImages)
 export(RunAlignment)
 export(RunLabelAssortativityTest)
 export(RunLocalG)
+export(RunMixedNNLS)
 export(RunNNLS)
 export(RunNeighborhoodEnrichmentTest)
 export(SubsetSTData)
