--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -11,6 +11,7 @@ articles:
   getting_started: getting_started.html
   image_alignment: image_alignment.html
   images_and_coordinates: images_and_coordinates.html
+  mask_images: mask_images.html
   numeric_features: numeric_features.html
   radial_distances: radial_distances.html
   region_neighbors: region_neighbors.html
@@ -18,7 +19,7 @@ articles:
   spatial_autocorrelation: spatial_autocorrelation.html
   spatial_statistics_for_labelled_spots: spatial_statistics_for_labelled_spots.html
   subset_and_merge: subset_and_merge.html
-last_built: 2023-02-13T15:43Z
+last_built: 2023-02-14T09:46Z
 urls:
   reference: https://ludvigla.github.io/semla/reference
   article: https://ludvigla.github.io/semla/articles
