Added utility plot themes and functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -58,6 +58,7 @@ export(MapLabelsSummary)
 export(MapMultipleFeatures)
 export(MaskImages)
 export(MergeSTData)
+export(ModifyPatchworkTitles)
 export(PlotFeatureLoadings)
 export(RadialDistance)
 export(ReadVisiumData)
@@ -70,6 +71,8 @@ export(RunMixedNNLS)
 export(RunNNLS)
 export(RunNeighborhoodEnrichmentTest)
 export(SubsetSTData)
+export(ThemeClean)
+export(ThemeLegendRight)
 export(TileImage)
 export(UpdateSTUtilityV1Object)
 export(centroid_angles_plot)
