--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: semla
 Type: Package
-Title: Process, analyze and visualize Spatially Resolved Transcriptomcis data
+Title: Process, analyze and visualize Spatially Resolved Transcriptomics data
 Version: 1.0.0
 Authors@R:
     c(person(
