--- a/NAMESPACE
+++ b/NAMESPACE
@@ -82,7 +82,6 @@ export(file_server)
 export(ftrviewer)
 export(ftrviewerOutput)
 export(generate_rigid_transform)
-export(icp)
 export(osddu)
 export(osdduOutput)
 export(paper)
@@ -180,6 +179,7 @@ importFrom(magick,image_channel)
 importFrom(magick,image_composite)
 importFrom(magick,image_connect)
 importFrom(magick,image_convert)
+importFrom(magick,image_convolve)
 importFrom(magick,image_crop)
 importFrom(magick,image_data)
 importFrom(magick,image_extent)
