--- a/NAMESPACE
+++ b/NAMESPACE
@@ -82,6 +82,7 @@ export(file_server)
 export(ftrviewer)
 export(ftrviewerOutput)
 export(generate_rigid_transform)
+export(icp)
 export(osddu)
 export(osdduOutput)
 export(paper)
@@ -95,6 +96,7 @@ exportClasses(Staffli)
 exportMethods("[[")
 exportMethods("[[<-")
 exportMethods(GetImages)
+exportMethods(GetStaffli)
 exportMethods(ImageInfo)
 import(cli)
 import(dplyr)
