Added images to .Rbuildignore

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -14,12 +14,14 @@ presentations/
 ^\.github$
 TODO.md
 vignettes
+images
 inst/htmlwidgets/paper.js.map
 inst/htmlwidgets/osddu.js.map
 inst/htmlwidgets/ftrviewer.js.map
 inst/extdata/mousebrain/spatial/tissue_hires_image.png
 inst/extdata/mousebrain/spatial/tissue_lowres_image.png
 inst/extdata/mousecolon/spatial/tissue_hires_image.png
+inst/extdata/mousecolon/spatial/tissue_hires_image.jpg
 inst/extdata/mousecolon/spatial/tissue_lowres_image.png
 stereoscope
 notebooks
