--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,10 +41,12 @@ export(CutSpatialNetwork)
 export(DisconnectRegions)
 export(ExportDataForViewer)
 export(FeatureViewer)
+export(GetCoordinates)
+export(GetImageInfo)
 export(GetImages)
+export(GetScaleFactors)
 export(GetSpatialNetwork)
 export(GetStaffli)
-export(ImageInfo)
 export(ImagePlot)
 export(ImageTransform)
 export(ImageTranslate)
@@ -63,6 +65,7 @@ export(PlotFeatureLoadings)
 export(RadialDistance)
 export(ReadVisiumData)
 export(RegionNeighbors)
+export(ReplaceImagePaths)
 export(RigidTransformImages)
 export(RunAlignment)
 export(RunLabelAssortativityTest)
@@ -95,9 +98,12 @@ export(scalebar)
 exportClasses(Staffli)
 exportMethods("[[")
 exportMethods("[[<-")
+exportMethods(GetCoordinates)
+exportMethods(GetImageInfo)
 exportMethods(GetImages)
+exportMethods(GetScaleFactors)
 exportMethods(GetStaffli)
-exportMethods(ImageInfo)
+exportMethods(ReplaceImagePaths)
 import(cli)
 import(dplyr)
 import(ggplot2)
