Update formatting of .Rbuildignore items

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,19 +1,22 @@
 ^.*\.Rproj$
 ^\.Rproj\.user$
-notebooks/
 ^LICENSE\.md$
-package.json
-webpack.config.js
-yarn.lock
+^vignettes$
+^notebooks$
 ^srcjs$
-presentations/
 ^_pkgdown\.yml$
 ^docs$
 ^pkgdown$
 ^\.github$
-TODO.md
-vignettes
-images/
+^cran-comments\.md$
+^CRAN-SUBMISSION$
+^stereoscope$
+^TODO\.md$
+^presentations$
+^yarn\.lock$
+^webpack\.config\.js$
+^package\.json$
+^images$
 inst/htmlwidgets/paper.js.map
 inst/htmlwidgets/osddu.js.map
 inst/htmlwidgets/ftrviewer.js.map
@@ -22,7 +25,3 @@ inst/extdata/mousebrain/spatial/tissue_lowres_image.png
 inst/extdata/mousecolon/spatial/tissue_hires_image.png
 inst/extdata/mousecolon/spatial/tissue_hires_image.jpg
 inst/extdata/mousecolon/spatial/tissue_lowres_image.png
-stereoscope
-notebooks
-^cran-comments\.md$
-^CRAN-SUBMISSION$
