--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,7 +51,9 @@ export(ImagePlot)
 export(ImageTransform)
 export(ImageTranslate)
 export(LoadAndMergeMatrices)
+export(LoadImageInfo)
 export(LoadImages)
+export(LoadScaleFactors)
 export(LoadSpatialCoordinates)
 export(MapFeatures)
 export(MapFeaturesSummary)
@@ -77,6 +79,7 @@ export(SubsetSTData)
 export(ThemeClean)
 export(ThemeLegendRight)
 export(TileImage)
+export(UpdateImageInfo)
 export(UpdateSTUtilityV1Object)
 export(centroid_angles_plot)
 export(export_coordinates)
