Added function LoadAnnotationCSV

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,7 @@ export(ImagePlot)
 export(ImageTransform)
 export(ImageTranslate)
 export(LoadAndMergeMatrices)
+export(LoadAnnotationCSV)
 export(LoadImageInfo)
 export(LoadImages)
 export(LoadScaleFactors)
