--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ S3method(RunMixedNNLS,Seurat)
 S3method(RunMixedNNLS,default)
 S3method(RunNNLS,Seurat)
 S3method(RunNNLS,default)
+export(AddSemlaToSeurat)
 export(AdjustTissueCoordinates)
 export(AnglePlot)
 export(CoordAndImageTransform)
