--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,7 +32,6 @@ S3method(RunMixedNNLS,Seurat)
 S3method(RunMixedNNLS,default)
 S3method(RunNNLS,Seurat)
 S3method(RunNNLS,default)
-export(AddSemlaToSeurat)
 export(AdjustTissueCoordinates)
 export(AnglePlot)
 export(CoordAndImageTransform)
@@ -85,6 +84,7 @@ export(ThemeLegendRight)
 export(TileImage)
 export(UpdateImageInfo)
 export(UpdateSTUtilityV1Object)
+export(UpdateSeuratForSemla)
 export(centroid_angles_plot)
 export(export_coordinates)
 export(export_graph)
