--- a/.gitignore
+++ b/.gitignore
@@ -5,13 +5,14 @@
 notebooks/
 presentations/
 vignettes/mousebrain/
-vignettes/kidney
+vignettes/kidney/
 package.json
 webpack.config.js
 yarn.lock
 vignettes/bc_visium/
 vignettes/R_objects/
 vignettes/demo_data/
+vignettes/synthetic_spots/
 BC_data/
 demo_data/
 manuscript_items/
