--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ vignettes/bc_visium/
 vignettes/R_objects/
 vignettes/demo_data/
 vignettes/synthetic_spots/
+vignettes/IF_data/
 BC_data/
 demo_data/
 manuscript_items/
