Addressed R CMD check comments

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -180,7 +180,9 @@ importFrom(glue,glue)
 importFrom(grDevices,as.raster)
 importFrom(grDevices,col2rgb)
 importFrom(grDevices,colorRampPalette)
+importFrom(grDevices,dev.off)
 importFrom(grDevices,hcl)
+importFrom(grDevices,png)
 importFrom(graphics,layout)
 importFrom(graphics,par)
 importFrom(graphics,title)
@@ -212,6 +214,7 @@ importFrom(magick,image_transparent)
 importFrom(magick,image_write)
 importFrom(methods,as)
 importFrom(methods,new)
+importFrom(methods,show)
 importFrom(parallel,detectCores)
 importFrom(parallel,makeCluster)
 importFrom(parallel,mclapply)
