--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ vignettes/R_objects/
 vignettes/demo_data/
 vignettes/synthetic_spots/
 vignettes/IF_data/
+vignettes/10x_data
 BC_data/
 demo_data/
 manuscript_items/
