--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -22,3 +22,8 @@ inst/htmlwidgets/paper.js.map
 inst/htmlwidgets/osddu.js.map
 inst/htmlwidgets/ftrviewer.js.map
 .renvignore
+Dockerfile
+.Rprofile
+^ftrviewer$
+^osddu$
+^paper$
